ref/Modules/AzureRM.Resources/v3.4.0/AzureRM.Resources.md
---
Module Name: AzureRM.Resources
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link: Please enter FwLink manually
Help Version: Please enter version of help manually (X.X.X.X) format
Locale: en-US
updated_at: 1/11/2017 9:26 PM
ms.date: 1/11/2017
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Resources/v3.4.0/AzureRM.Resources.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Resources/v3.4.0/AzureRM.Resources.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/cf5fb15dcd1fe2c86458f47e1a11dc88817021fc/azureps-cmdlets-docs/ResourceManager/AzureRM.Resources/v3.4.0/AzureRM.Resources.md
uid: ResourceManager/AzureRM.Resources/v3.4.0/AzureRM.Resources.md
ms.topic: conceptual
ms.prod: powershell
ms.technology: Azure PowerShell
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: False
ms.service: azure-powershell
---

# AzureRM.Resources Module
## Description
This topic displays help topics for the Azure Resource Manager Cmdlets.

## AzureRM.Resources Cmdlets
### [Export-AzureRmResourceGroup](Export-AzureRmResourceGroup.md)
Captures a resource group as a template and saves it to a file.

### [Find-AzureRmResource](Find-AzureRmResource.md)
Searches for resources based on specified parameters.

### [Find-AzureRmResourceGroup](Find-AzureRmResourceGroup.md)
Searches for resource groups.

### [Get-AzureRmADAppCredential](Get-AzureRmADAppCredential.md)
Retrieves a list of credentials associated with an application.

### [Get-AzureRmADApplication](Get-AzureRmADApplication.md)
Lists existing azure active directory applications.

### [Get-AzureRmADGroup](Get-AzureRmADGroup.md)
Filters active directory groups.

### [Get-AzureRmADGroupMember](Get-AzureRmADGroupMember.md)
Get a group members.

### [Get-AzureRmADServicePrincipal](Get-AzureRmADServicePrincipal.md)
Filters active directory service principals.

### [Get-AzureRmADSpCredential](Get-AzureRmADSpCredential.md)
Retrieves a list of credentials associated with a service principal.

### [Get-AzureRmADUser](Get-AzureRmADUser.md)
Filters active directory users.

### [Get-AzureRmLocation](Get-AzureRmLocation.md)
Gets all locations and the supported resource providers for each location.

### [Get-AzureRmPolicyAssignment](Get-AzureRmPolicyAssignment.md)
Gets policy assignments.

### [Get-AzureRmPolicyDefinition](Get-AzureRmPolicyDefinition.md)
Gets policy definitions.

### [Get-AzureRmProviderFeature](Get-AzureRmProviderFeature.md)
Gets information about Azure provider features.

### [Get-AzureRmProviderOperation](Get-AzureRmProviderOperation.md)
Gets the operations for an Azure resource provider that are securable using Azure RBAC.

### [Get-AzureRmResource](Get-AzureRmResource.md)
Gets resources.

### [Get-AzureRmResourceGroup](Get-AzureRmResourceGroup.md)
Gets resource groups.

### [Get-AzureRmResourceGroupDeployment](Get-AzureRmResourceGroupDeployment.md)
Gets the deployments in a resource group.

### [Get-AzureRmResourceGroupDeploymentOperation](Get-AzureRmResourceGroupDeploymentOperation.md)
Gets the resource group deployment operation

### [Get-AzureRmResourceLock](Get-AzureRmResourceLock.md)
Gets a resource lock.

### [Get-AzureRmResourceProvider](Get-AzureRmResourceProvider.md)
Gets a resource provider.

### [Get-AzureRmRoleAssignment](Get-AzureRmRoleAssignment.md)
Lists Azure RBAC role assignments at the specified scope.
By default it lists all role assignments in the selected Azure subscription.
Use respective parameters to list assignments to a specific user, or to list assignments on a specific resource group or resource.

### [Get-AzureRmRoleDefinition](Get-AzureRmRoleDefinition.md)
Lists all Azure RBAC roles that are available for assignment.

### [Invoke-AzureRmResourceAction](Invoke-AzureRmResourceAction.md)
Invokes an action on a resource.

### [Move-AzureRmResource](Move-AzureRmResource.md)
Moves a resource to a different resource group or subscription.

### [New-AzureRmADAppCredential](New-AzureRmADAppCredential.md)
Adds a credential to an existing application.

### [New-AzureRmADApplication](New-AzureRmADApplication.md)
Creates a new azure active directory application.

### [New-AzureRmADServicePrincipal](New-AzureRmADServicePrincipal.md)
Creates a new azure active directory service principal.

### [New-AzureRmADSpCredential](New-AzureRmADSpCredential.md)
Adds a credential to an existing service principal.

### [New-AzureRmADUser](New-AzureRmADUser.md)
Creates a new active directory user.

### [New-AzureRmPolicyAssignment](New-AzureRmPolicyAssignment.md)
Creates a policy assignment.

### [New-AzureRmPolicyDefinition](New-AzureRmPolicyDefinition.md)
Creates a policy definition.

### [New-AzureRmResource](New-AzureRmResource.md)
Creates a resource.

### [New-AzureRmResourceGroup](New-AzureRmResourceGroup.md)
Creates an Azure resource group.

### [New-AzureRmResourceGroupDeployment](New-AzureRmResourceGroupDeployment.md)
Adds an Azure deployment to a resource group.

### [New-AzureRmResourceLock](New-AzureRmResourceLock.md)
Creates a resource lock.

### [New-AzureRmRoleAssignment](New-AzureRmRoleAssignment.md)
Assigns the specified RBAC role to the specified principal, at the specified scope.

### [New-AzureRmRoleDefinition](New-AzureRmRoleDefinition.md)
Creates a custom role in Azure RBAC.
Provide either a JSON role definition file or a PSRoleDefinition object as input.
First, use the Get-AzureRmRoleDefinition command to generate a baseline role definition object.
Then, modify its properties as required.
Finally, use this command to create a custom role using role definition.

### [Register-AzureRmProviderFeature](Register-AzureRmProviderFeature.md)
Registers an Azure provider feature in your account.

### [Register-AzureRmResourceProvider](Register-AzureRmResourceProvider.md)
Registers a resource provider.

### [Remove-AzureRmADAppCredential](Remove-AzureRmADAppCredential.md)
Removes a credential from an application.

### [Remove-AzureRmADApplication](Remove-AzureRmADApplication.md)
Deletes the azure active directory application.

### [Remove-AzureRmADServicePrincipal](Remove-AzureRmADServicePrincipal.md)
Deletes the azure active directory service principal.

### [Remove-AzureRmADSpCredential](Remove-AzureRmADSpCredential.md)
Removes a credential from a service principal.

### [Remove-AzureRmADUser](Remove-AzureRmADUser.md)
Deletes an active directory user.

### [Remove-AzureRmPolicyAssignment](Remove-AzureRmPolicyAssignment.md)
Removes a policy assignment.

### [Remove-AzureRmPolicyDefinition](Remove-AzureRmPolicyDefinition.md)
Removes a policy definition.

### [Remove-AzureRmResource](Remove-AzureRmResource.md)
Removes a resource.

### [Remove-AzureRmResourceGroup](Remove-AzureRmResourceGroup.md)
Removes a resource group.

### [Remove-AzureRmResourceGroupDeployment](Remove-AzureRmResourceGroupDeployment.md)
Removes a resource group deployment and any associated operations.

### [Remove-AzureRmResourceLock](Remove-AzureRmResourceLock.md)
Removes a resource lock.

### [Remove-AzureRmRoleAssignment](Remove-AzureRmRoleAssignment.md)
Removes a role assignment to the specified principal who is assigned to a particular role at a particular scope.

### [Remove-AzureRmRoleDefinition](Remove-AzureRmRoleDefinition.md)
Deletes a custom role in Azure RBAC.
The role to be deleted is specified using the Id property of the role.
Delete will fail if there are existing role assignments made to the custom role.

### [Save-AzureRmResourceGroupDeploymentTemplate](Save-AzureRmResourceGroupDeploymentTemplate.md)
Saves a resource group deployment template to a file.

### [Set-AzureRmADApplication](Set-AzureRmADApplication.md)
Updates an existing azure active directory application.

### [Set-AzureRmADServicePrincipal](Set-AzureRmADServicePrincipal.md)
Updates an existing azure active directory service principal.

### [Set-AzureRmADUser](Set-AzureRmADUser.md)
Updates an existing active directory user.

### [Set-AzureRmPolicyAssignment](Set-AzureRmPolicyAssignment.md)
Modifies a policy assignment.

### [Set-AzureRmPolicyDefinition](Set-AzureRmPolicyDefinition.md)
Modifies a policy definition.

### [Set-AzureRmResource](Set-AzureRmResource.md)
Modifies a resource.

### [Set-AzureRmResourceGroup](Set-AzureRmResourceGroup.md)
Modifies a resource group.

### [Set-AzureRmResourceLock](Set-AzureRmResourceLock.md)
Modifies a resource lock.

### [Set-AzureRmRoleDefinition](Set-AzureRmRoleDefinition.md)
Modifies a custom role in Azure RBAC.
Provide the modified role definition either as a JSON file or as a PSRoleDefinition.
First, use the Get-AzureRmRoleDefinition command to retrieve the custom role that you wish to modify.
Then, modify the properties that you wish to change.
Finally, save the role definition using this command.

### [Stop-AzureRmResourceGroupDeployment](Stop-AzureRmResourceGroupDeployment.md)
Cancels a resource group deployment.

### [Test-AzureRmResourceGroupDeployment](Test-AzureRmResourceGroupDeployment.md)
Validates a resource group deployment.

### [Unregister-AzureRmResourceProvider](Unregister-AzureRmResourceProvider.md)
Unregisters a resource provider.

